# i2c

./: CMakeLists.txt  README.md  test.cpp
include/: iiccommon.h
include/c/: iic.h
include/c++/: iicc++.h
include/cplusplus/: iicplusplus.h
src/: iic.c  iicc++.cpp  iicplusplus.cpp
